@@ -2486,10 +2486,11 @@ include the @code{<stdio.h>} standard header before @file{mpfr.h},
 to allow @file{mpfr.h} to define prototypes for these functions.
 
 @deftypefun size_t mpfr_out_str (FILE *@var{stream}, int @var{base}, size_t @var{n}, mpfr_t @var{op}, mpfr_rnd_t @var{rnd})
-Output @var{op} on stream @var{stream} as a text string in base @var{base},
-rounded in the direction @var{rnd}.
-The base may vary from 2 to 62 (any other value yields undefined behavior).
-The argument @var{n} has the same meaning as in @code{mpfr_get_str}:
+Output @var{op} on stream @var{stream} as a text string in
+base @GMPabs{@var{base}}, rounded in the direction @var{rnd}.
+The base may vary from 2 to 62 or from @minus{}2 to @minus{}36
+(any other value yields undefined behavior). The argument @var{n} has
+the same meaning as in @code{mpfr_get_str} (@pxref{mpfr_get_str}):
 Print @var{n} significant digits exactly, or if @var{n} is 0, the number
 @code{mpfr_get_str_ndigits(@var{base},@var{p})} where @var{p} is the
 precision of @var{op} (@pxref{mpfr_get_str_ndigits}).
@@ -2502,8 +2503,8 @@ For the regular numbers, the format of the output is the following: the
 most significant digit, then a decimal-point character (defined by the
 current locale), then the remaining @var{n}@minus{}1 digits (including
 trailing zeros), then the exponent prefix, then the exponent in decimal.
-The exponent prefix is @samp{e} when @var{base} is less or equal to 10,
-@samp{@@} when @var{base} is greater than 10. @xref{mpfr_get_str} for
+The exponent prefix is @samp{e} when @math{@GMPabs{@var{base}} @le{} 10},
+and @samp{@@} when @math{@GMPabs{@var{base}} > 10}. @xref{mpfr_get_str} for
 information on the digits depending on the base.
 @c The term "exponent prefix" is used in the mpfr_strtofr description.
 
@@ -4245,6 +4246,11 @@ is set were unspecified.
 Note: this function has been renamed to @code{mpfr_get_z_2exp}
 in MPFR@tie{}3.0, but @code{mpfr_get_z_exp} is still available for
 compatibility reasons.
+
+@item @code{mpfr_out_str} changed in MPFR@tie{}4.1.
+The argument @var{base} can now be negative (from @minus{}2 to
+@minus{}36), in order to follow @code{mpfr_get_str} and GMP's
+@code{mpf_out_str} functions.
 
 @item @code{mpfr_set_exp} changed in MPFR@tie{}4.0.
 Before MPFR@tie{}4.0, the exponent was set whatever the contents of the MPFR
